# ttl255-netbox-plugin-bgppeering

./: .gitignore  NOTICE  README.md  pyproject.toml  tasks.py
development/: Dockerfile  base_configuration.py  dev.env  docker-compose.yml
netbox_bgppeering/: __init__.py  admin.py  filters.py  forms.py  icon_classes.py  models.py  navigation.py  release.py  tables.py  urls.py  views.py
netbox_bgppeering/api/: serializers.py  urls.py  views.py
netbox_bgppeering/migrations/: 0001_initial.py
netbox_bgppeering/templates/netbox_bgppeering/: bgppeering.html  bgppeering_delete.html  bgppeering_edit.html  bgppeering_list.html
